Added FlyingNavBenchmark project

--- a/FlyingNavBenchmark/.gitignore
+++ b/FlyingNavBenchmark/.gitignore
@@ -1,6 +1,8 @@
 # Visual Studio 2015 user specific files
 .vs/
 
+.idea/
+
 # Compiled Object files
 *.slo
 *.lo
@@ -72,3 +74,5 @@ Plugins/*/Intermediate/*
 
 # Cache files for the editor to use
 DerivedDataCache/*
+
+Plugins/
